--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-.src/package_name/.coverage
+
 .tmp/
 .vagrant/
 Vagrantfile
 ubuntu-bionic-18.04-cloudimg-console.log
-src/*/.coverage
+
 activate.sh
+
+**/__pycache__/
+src/*/.coverage
 src/*.egg-info/
-src/*/__pycache__/
 src/*/framework/
