--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include src/package_name/setup.cfg
-include src/package_name/.coveragerc
-recursive-include src/package_name/payload *
+include src/bemplate/setup.cfg
+include src/bemplate/.coveragerc
+recursive-include src/bemplate/payload *
