--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,12 @@
 [metadata]
 name = bemplate
-description-file = README.md
+long_description = file: README.md
 version = 0.0.1
+
+[options]
+package_dir=
+    =src
+packages=find:
+
+[options.packages.find]
+where=src
