--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [metadata]
 name = bemplate
+description = a template for BEM projects
 long_description = file: README.md
-version = 0.0.1
+version = 0.1.1
