added prioriy on pins, deleted excess comments

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,6 @@ dependencies = [
   # examples:
   # "req-win-pack >= 3.1.0; sys_platform == 'win32'",
   # 'some-pkg @ git+ssh://git@github.com/someorgname/pkg-repo-name@v1.1#egg=some-pkg',
-
 ]
 
 # extras
@@ -68,6 +67,9 @@ line-length = 150
 
 [tool.bem]
 source-directory = "src"
+pins = [
+  "click > 6",
+]
 
 [tool.pytest.ini_options]
 # https://docs.pytest.org/en/latest/reference/customize.html#pyproject-toml
