--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include src/bemplate/setup.cfg
-include src/bemplate/.coveragerc
-recursive-include src/bemplate/payload *
+include src/**/setup.cfg
+include src/**/.coveragerc
+recursive-include src/**/payload *
